--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
@@ -133,7 +133,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Components\ActorSprite.cpp" />
-    <ClCompile Include="..\Components\DWLoadingScene.cpp" />
+    <ClCompile Include="..\Components\DWLoading.cpp" />
     <ClCompile Include="..\Components\Effect.cpp" />
     <ClCompile Include="..\Components\EventDispatcher.cpp" />
     <ClCompile Include="..\Components\EventDispatcher.h" />
@@ -164,7 +164,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\AppMacros.h" />
     <ClInclude Include="..\Components\ActorSprite.h" />
-    <ClInclude Include="..\Components\DWLoadingScene.h" />
+    <ClInclude Include="..\Components\DWLoading.h" />
     <ClInclude Include="..\Components\dwtype.h" />
     <ClInclude Include="..\Components\Effect.h" />
     <ClInclude Include="..\Components\Heap.h" />
