--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
@@ -209,6 +209,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\Data\fireball.txt" />
     <Text Include="..\Data\hit.txt" />
     <Text Include="..\Data\trace.txt" />
   </ItemGroup>
