--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj.filters
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj.filters
@@ -205,5 +205,8 @@
     <Text Include="..\Data\hit.txt">
       <Filter>Data</Filter>
     </Text>
+    <Text Include="..\Data\fireball.txt">
+      <Filter>Data</Filter>
+    </Text>
   </ItemGroup>
 </Project>
